<resources>
    <string name="app_name">BHW</string>
    <string name="title">BLACK HOLE WARS</string>
    <string name="enter1">Enter Player 1 Name:</string>
    <string name="enter2">Enter Player 2 Name:</string>
    <string name="diff">Enter Difficulty:</string>
    <string name="startGame">Start Game</string>
    <string-array name="diffs">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>EXTREME</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="turnName">\'s turn</string>
    <string name="left">&#160;left:&#160;</string>
    <string name="pass">Please pass to&#160;</string>
    <string name="home">\'s home</string>
    <string name="p2Name">Player 2</string>
    <string name="p1Name">Player 1</string>
    <string name="square">Square</string>
    <string name="circle">Circle</string>
    <string name="type">Choose Black Hole Type:</string>
</resources>
